// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons|Wysiwyg Format bold 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M15.225 11.79C16.195 11.12 16.875 10.02 16.875 9C16.875 6.74 15.125 5 12.875 5H7.62495C7.07495 5 6.62495 5.45 6.62495 6V18C6.62495 18.55 7.07495 19 7.62495 19H13.405C15.475 19 17.365 17.31 17.375 15.23C17.385 13.7 16.525 12.39 15.225 11.79ZM9.62495 7.5H12.625C13.455 7.5 14.125 8.17 14.125 9C14.125 9.83 13.455 10.5 12.625 10.5H9.62495V7.5ZM9.62495 16.5H13.125C13.955 16.5 14.625 15.83 14.625 15C14.625 14.17 13.955 13.5 13.125 13.5H9.62495V16.5Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`Icons|Wysiwyg Format bulleted list 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M2.75 6C2.75 5.17 3.42 4.5 4.25 4.5C5.08 4.5 5.75 5.17 5.75 6C5.75 6.83 5.08 7.5 4.25 7.5C3.42 7.5 2.75 6.83 2.75 6ZM2.75 12C2.75 11.17 3.42 10.5 4.25 10.5C5.08 10.5 5.75 11.17 5.75 12C5.75 12.83 5.08 13.5 4.25 13.5C3.42 13.5 2.75 12.83 2.75 12ZM4.25 16.5C3.42 16.5 2.75 17.18 2.75 18C2.75 18.82 3.43 19.5 4.25 19.5C5.07 19.5 5.75 18.82 5.75 18C5.75 17.18 5.08 16.5 4.25 16.5ZM20.25 19H8.25C7.7 19 7.25 18.55 7.25 18C7.25 17.45 7.7 17 8.25 17H20.25C20.8 17 21.25 17.45 21.25 18C21.25 18.55 20.8 19 20.25 19ZM8.25 13H20.25C20.8 13 21.25 12.55 21.25 12C21.25 11.45 20.8 11 20.25 11H8.25C7.7 11 7.25 11.45 7.25 12C7.25 12.55 7.7 13 8.25 13ZM8.25 7C7.7 7 7.25 6.55 7.25 6C7.25 5.45 7.7 5 8.25 5H20.25C20.8 5 21.25 5.45 21.25 6C21.25 6.55 20.8 7 20.25 7H8.25Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`Icons|Wysiwyg Format italics 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M10 6.5C10 7.33 10.67 8 11.5 8H12.21L8.79 16H7.5C6.67 16 6 16.67 6 17.5C6 18.33 6.67 19 7.5 19H12.5C13.33 19 14 18.33 14 17.5C14 16.67 13.33 16 12.5 16H11.79L15.21 8H16.5C17.33 8 18 7.33 18 6.5C18 5.67 17.33 5 16.5 5H11.5C10.67 5 10 5.67 10 6.5Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`Icons|Wysiwyg Format numbered list 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M3 5H3.5V7.5C3.5 7.78 3.72 8 4 8C4.28 8 4.5 7.78 4.5 7.5V4.5C4.5 4.22 4.28 4 4 4H3C2.72 4 2.5 4.22 2.5 4.5C2.5 4.78 2.72 5 3 5ZM20.5 7H8.5C7.95 7 7.5 6.55 7.5 6C7.5 5.45 7.95 5 8.5 5H20.5C21.05 5 21.5 5.45 21.5 6C21.5 6.55 21.05 7 20.5 7ZM8.5 17H20.5C21.05 17 21.5 17.45 21.5 18C21.5 18.55 21.05 19 20.5 19H8.5C7.95 19 7.5 18.55 7.5 18C7.5 17.45 7.95 17 8.5 17ZM20.5 11H8.5C7.95 11 7.5 11.45 7.5 12C7.5 12.55 7.95 13 8.5 13H20.5C21.05 13 21.5 12.55 21.5 12C21.5 11.45 21.05 11 20.5 11ZM5 16C5.28 16 5.5 16.22 5.5 16.5V19.5C5.5 19.78 5.28 20 5 20H3C2.72 20 2.5 19.78 2.5 19.5C2.5 19.22 2.72 19 3 19H4.5V18.5H4C3.72 18.5 3.5 18.28 3.5 18C3.5 17.72 3.72 17.5 4 17.5H4.5V17H3C2.72 17 2.5 16.78 2.5 16.5C2.5 16.22 2.72 16 3 16H5ZM2.5 10.5C2.5 10.22 2.72 10 3 10H5C5.28 10 5.5 10.22 5.5 10.5V10.72C5.5 10.83 5.46 10.95 5.38 11.04L3.7 13H5C5.28 13 5.5 13.22 5.5 13.5C5.5 13.78 5.28 14 5 14H3C2.72 14 2.5 13.78 2.5 13.5V13.28C2.5 13.17 2.54 13.05 2.62 12.96L4.3 11H3C2.72 11 2.5 10.78 2.5 10.5Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`Icons|Wysiwyg Link 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M11 15H7C5.35 15 4 13.65 4 12C4 10.35 5.35 9 7 9H11V7H7C4.24 7 2 9.24 2 12C2 14.76 4.24 17 7 17H11V15ZM17 7H13V9H17C18.65 9 20 10.35 20 12C20 13.65 18.65 15 17 15H13V17H17C19.76 17 22 14.76 22 12C22 9.24 19.76 7 17 7ZM16 11H8V13H16V11Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`Icons|Wysiwyg Title 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M5 6C5 6.83 5.67 7.5 6.5 7.5H10.5V18C10.5 18.83 11.17 19.5 12 19.5C12.83 19.5 13.5 18.83 13.5 18V7.5H17.5C18.33 7.5 19 6.83 19 6C19 5.17 18.33 4.5 17.5 4.5H6.5C5.67 4.5 5 5.17 5 6Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;
